Repaint partially painted table row collapsed borders when cull rect changes

We had a mechanism to repaint a large display item clipped by
paint cull rect when cull rect changes, and used that mechanism for
table section/row backgrounds.

Now also use the mechanism for collapsed borders which are painted
by table rows.

BUG=757457

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I641e82eec9aae477498e8daf1a5944b9d3f43201
Reviewed-on: https://chromium-review.googlesource.com/627177
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496727}
Former-commit-id: 70176d2a327c7442145350d32eaab4277e98e4fd