third_party/WebKit/Source/core/paint/TableRowPainter.cpp
@@ -54,6 +54,18 @@ void TableRowPainter::PaintOutline(const PaintInfo& paint_info,
       .PaintOutline(paint_info, adjusted_paint_offset);
 }
 
+void TableRowPainter::HandleChangedPartialPaint(
+    const PaintInfo& paint_info,
+    const CellSpan& dirtied_columns) {
+  PaintResult paint_result =
+      dirtied_columns ==
+              layout_table_row_.Section()->FullTableEffectiveColumnSpan()
+          ? kFullyPainted
+          : kMayBeClippedByPaintDirtyRect;
+  layout_table_row_.GetMutableForPainting().UpdatePaintResult(
+      paint_result, paint_info.GetCullRect());
+}
+
 void TableRowPainter::PaintBoxDecorationBackground(
     const PaintInfo& paint_info,
     const LayoutPoint& paint_offset,
@@ -63,13 +75,7 @@ void TableRowPainter::PaintBoxDecorationBackground(
   if (!has_background && !has_box_shadow)
     return;
 
-  const auto* section = layout_table_row_.Section();
-  PaintResult paint_result =
-      dirtied_columns == section->FullTableEffectiveColumnSpan()
-          ? kFullyPainted
-          : kMayBeClippedByPaintDirtyRect;
-  layout_table_row_.GetMutableForPainting().UpdatePaintResult(
-      paint_result, paint_info.GetCullRect());
+  HandleChangedPartialPaint(paint_info, dirtied_columns);
 
   if (LayoutObjectDrawingRecorder::UseCachedDrawingIfPossible(
           paint_info.context, layout_table_row_,
@@ -92,6 +98,7 @@ void TableRowPainter::PaintBoxDecorationBackground(
   }
 
   if (has_background) {
+    const auto* section = layout_table_row_.Section();
     PaintInfo paint_info_for_cells = paint_info.ForDescendants();
     for (auto c = dirtied_columns.Start(); c < dirtied_columns.End(); c++) {
       if (const auto* cell =
@@ -129,6 +136,8 @@ void TableRowPainter::PaintCollapsedBorders(const PaintInfo& paint_info,
   Optional<LayoutObjectDrawingRecorder> recorder;
 
   if (LIKELY(!layout_table_row_.Table()->ShouldPaintAllCollapsedBorders())) {
+    HandleChangedPartialPaint(paint_info, dirtied_columns);
+
     if (DrawingRecorder::UseCachedDrawingIfPossible(
             paint_info.context, layout_table_row_,
             DisplayItem::kTableCollapsedBorders))
