third_party/WebKit/Source/core/paint/TableRowPainter.h
@@ -37,6 +37,9 @@ class TableRowPainter {
                                  const PaintInfo&,
                                  const LayoutPoint&);
 
+  void HandleChangedPartialPaint(const PaintInfo&,
+                                 const CellSpan& dirtied_columns);
+
   const LayoutTableRow& layout_table_row_;
 };
 
